Fix mobile table width overflow

--- a/wiki/.vuepress/styles/index.styl
+++ b/wiki/.vuepress/styles/index.styl
@@ -22,8 +22,13 @@ pre.vue-container
 
 .home .hero img
     width 320px
+    max-width 60% !important
+    margin 3rem auto 2rem auto !important
   .description
     font-size 1.3rem !important
+
+table img
+    max-width none !important
 
 .dplayer
   margin 1rem 0 1rem 0
